

=== 2.0.13 / ?? Aug 2009

* Added support for specifying a list of hosts in .ssh/config, with tests (GH-6) [Delano Mandelbaum]

* Added tests for arcfour128/256/512 lengths, encryption, and decryption [Delano Mandelbaum]

* Skip packet stream tests for arcfour128/256/512 [Delano Mandelbaum]

* Fix for OpenSSL cipher key length because it always returns 16, even when 32 byte keys are required, e.g. for arcfour256 and arcfour512 ciphers [Karl Varga]


=== 2.0.12 / 08 Jun 2009

* Applied patch for arcfour128 and arcfour256 support [Denis Bernard]

* Use unbuffered reads when negotiating the protocol version [Steven Hazel]


=== 2.0.11 / 24 Feb 2009

* Add :key_data option for specifying raw private keys in PEM format [Alex Holems, Andrew Babkin]


=== 2.0.10 / 4 Feb 2009

* Added Net::SSH.configuration_for to make it easier to query the SSH configuration file(s) [Jamis Buck]


=== 2.0.9 / 1 Feb 2009

* Specifying non-nil user argument overrides user in .ssh/config [Jamis Buck]

* Ignore requests for non-existent channels (workaround ssh server bug) [Jamis Buck]

* Add terminate! method for hard shutdown scenarios [Jamis Buck]

* Revert to pre-2.0.7 key-loading behavior by default, but load private-key if public-key doesn't exist [Jamis Buck]

* Make sure :passphrase option gets passed to key manager [Bob Cotton]


=== 2.0.8 / 29 December 2008

* Fix private key change from 2.0.7 so that keys are loaded just-in-time, avoiding unecessary prompts from encrypted keys. [Jamis Buck]


=== 2.0.7 / 29 December 2008

* Make key manager use private keys instead of requiring public key to exist [arilerner@mac.com]

* Fix failing tests [arilerner@mac.com]

* Don't include pageant when running under JRuby [Angel N. Sciortino]


=== 2.0.6 / 6 December 2008

* Update the Manifest file so that the gem includes all necessary files [Jamis Buck]


=== 2.0.5 / 6 December 2008

* Make the Pageant interface comply with more of the Socket interface to avoid related errors [Jamis Buck]
